<resources>
    <string name="app_name">My Application</string>
    <string name="choosedate">Выберите дату</string>
    <string name="townin">Город прилёта</string>
    <string name="townout">Город вылета</string>
    <string name="datein">Дата прилёта</string>
    <string name="dateout">Дата вылета</string>
    <string name="adult">Взрослые</string>
    <string name="child">Дети</string>
    <string name="infant">Младенцы</string>
    <string name="search">Поиск</string>

    <string-array name="cities">
        <item>Иркутск</item>
        <item>Анапа</item>
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Красноярск</item>
    </string-array>
</resources>